add svg and css

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <ul class="team-soc-list">
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
-                      <svg width="20" height="20">
+                      <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram_team"
                         ></use>
@@ -191,7 +191,7 @@
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
-                      <svg width="20" height="20">
+                      <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-twitter_team"
                         ></use>
@@ -200,7 +200,7 @@
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
-                      <svg width="20" height="20">
+                      <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook_team"
                         ></use>
@@ -209,7 +209,7 @@
                   </li>
                   <li class="team-soc-item">
                     <a href="" class="team-soc-link">
-                      <svg width="20" height="20">
+                      <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin_team"
                         ></use>
@@ -231,16 +231,40 @@
                 <p lang="en" class="team-list-descr">Frontend Developer</p>
                 <ul class="team-soc-list">
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -257,16 +281,40 @@
                 <p lang="en" class="team-list-descr">Marketing</p>
                 <ul class="team-soc-list">
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -283,16 +331,40 @@
                 <p lang="en" class="team-list-descr">UI Designer</p>
                 <ul class="team-soc-list">
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link" aria-label="Instagram">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link" aria-label="Twitter">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link" aria-label="Facebook">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href=""></a>
+                    <a href="" class="team-soc-link" aria-label="LinkedIn">
+                      <svg width="20" height="20" class="team-soc-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin_team"
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -302,47 +374,47 @@
       </section>
 
       <section class="clients section">
-        <div>
+        <div class="container">
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list list">
-            <li class="">
-              <a href="">
-                <svg class="clients-icon">
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
-            <li class="">
-              <a href="">
-                <svg class="clients-icon">
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
-            <li class="">
-              <a href="">
-                <svg class="clients-icon">
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
-            <li class="">
-              <a href="">
-                <svg class="clients-icon">
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
-            <li class="">
-              <a href="">
-                <svg class="clients-icon">
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
-            <li class="">
-              <a href="">
-                <svg class="clients-icon">
+            <li class="clients-list-item">
+              <a href="" class="clients-list-link">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-client6"></use>
                 </svg>
               </a>
@@ -353,32 +425,70 @@
     </main>
 
     <footer class="bottom-page">
-      <div class="container">
-        <a href="#" class="footer-logo link">
-          <span class="footer-logo-accent">Web</span>Studio
-        </a>
-        <ul class="footer-nav-address list">
-          <li class="item">
-            <a
-              href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
-              target="_blank"
-              rel="noopenner noreferrer nofollow"
-              class="footer-nav-link-address link"
-            >
-              м. Київ, пр-т Лесі Українки, 26
-            </a>
-          </li>
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="footer-nav-link link">
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="footer-nav-link link">
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
+      <div class="footer-container container">
+        <div class="footer-nav">
+          <a href="#" class="footer-logo link">
+            <span class="footer-logo-accent">Web</span>Studio
+          </a>
+          <ul class="footer-nav-address list">
+            <li class="item">
+              <a
+                href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
+                target="_blank"
+                rel="noopenner noreferrer nofollow"
+                class="footer-nav-link-address link"
+              >
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="footer-nav-link link">
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="footer-nav-link link">
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-soc">
+          <h3 class="footer-soc-title">приєднуйтесь</h3>
+          <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link">
+                <svg width="20" height="20" class="footer-soc-icon">
+                  <use
+                    href="./images/symbol-defs.svg#icon-instagram_team"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link">
+                <svg width="20" height="20" class="footer-soc-icon">
+                  <use href="./images/symbol-defs.svg#icon-twitter_team"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link">
+                <svg width="20" height="20" class="footer-soc-icon">
+                  <use href="./images/symbol-defs.svg#icon-facebook_team"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link">
+                <svg width="20" height="20" class="footer-soc-icon">
+                  <use href="./images/symbol-defs.svg#icon-linkedin_team"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
