--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="top-page top-page-border">
+    <header class="top-page">
       <div class="container header-nav">
         <nav class="header-nav">
           <a href="./index.html" class="logo link">
@@ -29,10 +29,12 @@
           </a>
           <ul class="site-nav list">
             <li class="item">
-              <a href="./index.html" class="site-nav-link link"> Студія </a>
+              <a href="./index.html" class="site-nav-link link current">
+                Студія
+              </a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="site-nav-link link current">
+              <a href="./portfolio.html" class="site-nav-link link">
                 Портфоліо
               </a>
             </li>
@@ -43,14 +45,19 @@
         </nav>
         <ul class="auth-nav list">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="auth-nav-link link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="auth-nav-link link">
+              <svg width="16" height="12" class="auth-nav-icon">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="auth-nav-link link"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="auth-nav-link link">
+              <svg width="10" height="16" class="auth-nav-icon">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -206,32 +213,70 @@
     </main>
 
     <footer class="bottom-page">
-      <div class="container">
-        <a href="#" class="footer-logo link">
-          <span class="footer-logo-accent">Web</span>Studio
-        </a>
-        <ul class="footer-nav-adress list">
-          <li class="item">
-            <a
-              href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
-              target="_blank"
-              rel="noopenner noreferrer nofollow"
-              class="footer-nav-link-adress link"
-            >
-              м. Київ, пр-т Лесі Українки, 26
-            </a>
-          </li>
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="footer-nav-link link">
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="footer-nav-link link">
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
+      <div class="footer-container container">
+        <div class="footer-nav">
+          <a href="#" class="footer-logo link">
+            <span class="footer-logo-accent">Web</span>Studio
+          </a>
+          <ul class="footer-nav-address list">
+            <li class="item">
+              <a
+                href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
+                target="_blank"
+                rel="noopenner noreferrer nofollow"
+                class="footer-nav-link-address link"
+              >
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="footer-nav-link link">
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="item">
+              <a href="tel:+380961111111" class="footer-nav-link link">
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-soc">
+          <h3 class="footer-soc-title">приєднуйтесь</h3>
+          <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link">
+                <svg width="20" height="20" class="footer-soc-icon">
+                  <use
+                    href="./images/symbol-defs.svg#icon-instagram_team"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link">
+                <svg width="20" height="20" class="footer-soc-icon">
+                  <use href="./images/symbol-defs.svg#icon-twitter_team"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link">
+                <svg width="20" height="20" class="footer-soc-icon">
+                  <use href="./images/symbol-defs.svg#icon-facebook_team"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link">
+                <svg width="20" height="20" class="footer-soc-icon">
+                  <use href="./images/symbol-defs.svg#icon-linkedin_team"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
