--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <ul class="features-link list">
             <li class="item">
               <div class="features-item-img">
-                <svg width="70" heigh="70">
+                <svg width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -89,7 +89,7 @@
             </li>
             <li class="item">
               <div class="features-item-img">
-                <svg width="70" heigh="70">
+                <svg width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -103,7 +103,7 @@
             </li>
             <li class="item">
               <div class="features-item-img">
-                <svg width="70" heigh="70">
+                <svg width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -117,7 +117,7 @@
             </li>
             <li class="item">
               <div class="features-item-img">
-                <svg width="70" heigh="70">
+                <svg width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
