--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,10 @@
           </a>
           <ul class="site-nav list">
             <li class="item">
-              <a href="./index.html" class="site-nav-link link current">
-                Студія
-              </a>
+              <a href="./index.html" class="site-nav-link link"> Студія </a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="site-nav-link link">
+              <a href="./portfolio.html" class="site-nav-link link current">
                 Портфоліо
               </a>
             </li>
