--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
           </ul>
           <ul class="portfolio-grid list">
             <li class="grid-item">
-              <a href="#" class="link">
+              <a href="#" class="grid-link link">
                 <img
                   src="./images/technokriak.jpeg"
                   alt=""
