--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <p lang="en" class="team-list-descr">Product Designer</p>
                 <ul class="team-soc-list">
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="Instagram">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram_team"
@@ -190,7 +190,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="Twitter">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-twitter_team"
@@ -199,7 +199,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="Facebook">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook_team"
@@ -208,7 +208,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="LinkedIn">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin_team"
@@ -231,7 +231,7 @@
                 <p lang="en" class="team-list-descr">Frontend Developer</p>
                 <ul class="team-soc-list">
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="Instagram">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram_team"
@@ -240,7 +240,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="Twitter">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-twitter_team"
@@ -249,7 +249,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="Facebook">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook_team"
@@ -258,7 +258,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="LinkedIn">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin_team"
@@ -281,7 +281,7 @@
                 <p lang="en" class="team-list-descr">Marketing</p>
                 <ul class="team-soc-list">
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="Instagram">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram_team"
@@ -290,7 +290,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="Twitter">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-twitter_team"
@@ -299,7 +299,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="Facebook">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook_team"
@@ -308,7 +308,7 @@
                     </a>
                   </li>
                   <li class="team-soc-item">
-                    <a href="" class="team-soc-link">
+                    <a href="" class="team-soc-link" aria-label="LinkedIn">
                       <svg width="20" height="20" class="team-soc-icon">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin_team"
@@ -430,35 +430,39 @@
           <a href="#" class="footer-logo link">
             <span class="footer-logo-accent">Web</span>Studio
           </a>
-          <ul class="footer-nav-address list">
-            <li class="item">
-              <a
-                href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
-                target="_blank"
-                rel="noopenner noreferrer nofollow"
-                class="footer-nav-link-address link"
-              >
-                м. Київ, пр-т Лесі Українки, 26
-              </a>
-            </li>
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="footer-nav-link link">
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="footer-nav-link link">
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
+          <address>
+            <ul class="footer-nav-address list">
+              <li class="item">
+                <a
+                  href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
+                  target="_blank"
+                  rel="noopenner noreferrer nofollow"
+                  class="footer-nav-link-address link"
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="footer-nav-link link"
+                >
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="item">
+                <a href="tel:+380961111111" class="footer-nav-link link">
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+          </address>
         </div>
-
         <div class="footer-soc">
           <h3 class="footer-soc-title">приєднуйтесь</h3>
           <ul class="footer-soc-list">
             <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
+              <a href="" class="footer-soc-link" aria-label="Instagram">
                 <svg width="20" height="20" class="footer-soc-icon">
                   <use
                     href="./images/symbol-defs.svg#icon-instagram_team"
@@ -467,21 +471,21 @@
               </a>
             </li>
             <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
+              <a href="" class="footer-soc-link" aria-label="Twitter">
                 <svg width="20" height="20" class="footer-soc-icon">
                   <use href="./images/symbol-defs.svg#icon-twitter_team"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
+              <a href="" class="footer-soc-link" aria-label="Facebook">
                 <svg width="20" height="20" class="footer-soc-icon">
                   <use href="./images/symbol-defs.svg#icon-facebook_team"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
+              <a href="" class="footer-soc-link" aria-label="LinkedIn">
                 <svg width="20" height="20" class="footer-soc-icon">
                   <use href="./images/symbol-defs.svg#icon-linkedin_team"></use>
                 </svg>
