--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
               </a>
             </li>
             <li class="grid-item">
-              <a href="#" class="link">
+              <a href="#" class="grid-link link">
                 <img
                   src="./images/neworlean.jpeg"
                   alt=""
@@ -113,7 +113,7 @@
               </a>
             </li>
             <li class="grid-item">
-              <a href="#" class="link">
+              <a href="#" class="grid-link link">
                 <img
                   src="./images/seafood.jpeg"
                   alt=""
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="grid-item">
-              <a href="#" class="link">
+              <a href="#" class="grid-link link">
                 <img
                   src="./images/prime.jpeg"
                   alt=""
@@ -141,7 +141,7 @@
               </a>
             </li>
             <li class="grid-item">
-              <a href="#" class="link">
+              <a href="#" class="grid-link link">
                 <img
                   src="./images/boxes.jpeg"
                   alt=""
@@ -155,7 +155,7 @@
               </a>
             </li>
             <li class="grid-item">
-              <a href="#" class="link">
+              <a href="#" class="grid-link link">
                 <img
                   src="./images/inspiration.jpeg"
                   alt=""
@@ -169,7 +169,7 @@
               </a>
             </li>
             <li class="grid-item">
-              <a href="#" class="link">
+              <a href="#" class="grid-link link">
                 <img
                   src="./images/limitededition.jpeg"
                   alt=""
@@ -183,7 +183,7 @@
               </a>
             </li>
             <li class="grid-item">
-              <a href="#" class="link">
+              <a href="#" class="grid-link link">
                 <img src="./images/lab.jpeg" alt="" width="370" height="294" />
                 <div class="grid-item-text">
                   <h2 class="link-title">Проєкт LAB</h2>
@@ -192,7 +192,7 @@
               </a>
             </li>
             <li class="grid-item">
-              <a href="#" class="link">
+              <a href="#" class="grid-link link">
                 <img
                   src="./images/growing.jpeg"
                   alt=""
@@ -216,35 +216,39 @@
           <a href="#" class="footer-logo link">
             <span class="footer-logo-accent">Web</span>Studio
           </a>
-          <ul class="footer-nav-address list">
-            <li class="item">
-              <a
-                href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
-                target="_blank"
-                rel="noopenner noreferrer nofollow"
-                class="footer-nav-link-address link"
-              >
-                м. Київ, пр-т Лесі Українки, 26
-              </a>
-            </li>
-            <li class="item">
-              <a href="mailto:info@devstudio.com" class="footer-nav-link link">
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="footer-nav-link link">
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
+          <address>
+            <ul class="footer-nav-address list">
+              <li class="footer-nav-item item">
+                <a
+                  href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
+                  target="_blank"
+                  rel="noopenner noreferrer nofollow"
+                  class="footer-nav-link-address link"
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="footer-nav-item item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="footer-nav-link link"
+                >
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="footer-nav-item item">
+                <a href="tel:+380961111111" class="footer-nav-link link">
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+          </address>
         </div>
-
         <div class="footer-soc">
           <h3 class="footer-soc-title">приєднуйтесь</h3>
           <ul class="footer-soc-list">
             <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
+              <a href="" class="footer-soc-link" aria-label="Instagram">
                 <svg width="20" height="20" class="footer-soc-icon">
                   <use
                     href="./images/symbol-defs.svg#icon-instagram_team"
@@ -253,21 +257,21 @@
               </a>
             </li>
             <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
+              <a href="" class="footer-soc-link" aria-label="Twitter">
                 <svg width="20" height="20" class="footer-soc-icon">
                   <use href="./images/symbol-defs.svg#icon-twitter_team"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
+              <a href="" class="footer-soc-link" aria-label="Facebook">
                 <svg width="20" height="20" class="footer-soc-icon">
                   <use href="./images/symbol-defs.svg#icon-facebook_team"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
-              <a href="" class="footer-soc-link">
+              <a href="" class="footer-soc-link" aria-label="LinkedIn">
                 <svg width="20" height="20" class="footer-soc-icon">
                   <use href="./images/symbol-defs.svg#icon-linkedin_team"></use>
                 </svg>
