--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         <div class="container">
           <h2 class="features-title visually-hidden">Особливості</h2>
           <ul class="features-link list">
-            <li class="item">
+            <li class="features-item item">
               <div class="features-item-img">
                 <svg width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <div class="features-item">
+              <div class="">
                 <h3 class="features-item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p class="feature-descr">
                   Ідейні міркування, і навіть початок повсякденної роботи з
@@ -87,13 +87,13 @@
                 </p>
               </div>
             </li>
-            <li class="item">
+            <li class="features-item item">
               <div class="features-item-img">
                 <svg width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
-              <div class="features-item">
+              <div class="">
                 <h3 class="features-item-title">ПУНКТУАЛЬНІСТЬ</h3>
                 <p class="feature-descr">
                   Завдання організації, особливо рамки і місце навчання кадрів
@@ -101,13 +101,13 @@
                 </p>
               </div>
             </li>
-            <li class="item">
+            <li class="features-item item">
               <div class="features-item-img">
                 <svg width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <div class="features-item">
+              <div class="">
                 <h3 class="features-item-title">ПЛАНУВАННЯ</h3>
                 <p class="feature-descr">
                   Так само консультація з широким активом значною мірою
@@ -115,13 +115,13 @@
                 </p>
               </div>
             </li>
-            <li class="item">
+            <li class="features-item item">
               <div class="features-item-img">
                 <svg width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <div class="features-item">
+              <div class="">
                 <h3 class="features-item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p class="feature-descr">
                   Значимість цих проблем настільки очевидна, що реалізація
@@ -432,7 +432,7 @@
           </a>
           <address>
             <ul class="footer-nav-address list">
-              <li class="item">
+              <li class="footer-nav-item item">
                 <a
                   href="https://goo.gl/maps/T1ktbeCNpbdaZyWX9"
                   target="_blank"
@@ -442,7 +442,7 @@
                   м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
-              <li class="item">
+              <li class="footer-nav-item item">
                 <a
                   href="mailto:info@devstudio.com"
                   class="footer-nav-link link"
@@ -450,7 +450,7 @@
                   info@devstudio.com
                 </a>
               </li>
-              <li class="item">
+              <li class="footer-nav-item item">
                 <a href="tel:+380961111111" class="footer-nav-link link">
                   +38 096 111 11 11
                 </a>
